--- a/templates/posts/detail.html
+++ b/templates/posts/detail.html
@@ -50,8 +50,19 @@
             <div>
                 <p>{{ post.price }}</p>
             </div>
+            <div>
+                <p>{{ post.hashtags }}</p>
+            </div>
         </div>
     </div>
+    <div class="create_comment">
+        <form action="" method="post">
+            {% csrf_token %}
+            {{ form.as_p }}
+            <input type="submit" class="btn btn-primary" value="Добавить Комментарий">
+        </form>
+    </div>
+
     <div class="comments">
         {% for comment in comments %}
             <div style="margin: 50px">
@@ -60,4 +71,5 @@
             </div>
         {% endfor %}
     </div>
+
 {% endblock %}
