--- a/templates/layouts/main.html
+++ b/templates/layouts/main.html
@@ -26,13 +26,13 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                 <div class="navbar-nav">
-                    <a style="color: black" class="nav-link active" aria-current="page" href="/">Home</a>
-                    <a style="color: black" class="nav-link" href="/posts/">Posts</a>
-                    <a style="color: black" class="nav-link" href="/hashtags/">Hashtags</a>
-                    <a style="color: black" class="nav-link" href="/posts/create">
+                    <a style="color:dimgray" class="nav-link active" aria-current="page" href="/">Home</a>
+                    <a style="color:dimgray" class="nav-link" href="/posts/">Posts</a>
+                    <a style="color:dimgray" class="nav-link" href="/hashtags/">Hashtags</a>
+                    <a style="color:dimgray" class="nav-link" href="/posts/create">
                         Create Post
                     </a>
-                    <a style="color: black" class="nav-link" href="/hashtag/create">
+                    <a style="color:dimgray" class="nav-link" href="/hashtag/create">
                         Create Hashtag
                     </a>
                 </div>
