--- a/templates/posts/create_hashtag.html
+++ b/templates/posts/create_hashtag.html
@@ -2,7 +2,7 @@
 
 {% block content %}
     <div>
-        <form action="/hashtag/create/" method="post">
+        <form action="/hashtag/create" method="post">
             {% csrf_token %}
             {{ form.as_p }}
             <input type="submit" value="Create Hashtag" class="btn btn-primary">
