--- a/templates/layouts/main.html
+++ b/templates/layouts/main.html
@@ -29,12 +29,14 @@
                     <a style="color:dimgray" class="nav-link active" aria-current="page" href="/">Home</a>
                     <a style="color:dimgray" class="nav-link" href="/posts/">Posts</a>
                     <a style="color:dimgray" class="nav-link" href="/hashtags/">Hashtags</a>
-                    <a style="color:dimgray" class="nav-link" href="/posts/create">
-                        Create Post
-                    </a>
-                    <a style="color:dimgray" class="nav-link" href="/hashtag/create">
-                        Create Hashtag
-                    </a>
+                    {% if user %}
+                        <a style="color:dimgray" class="nav-link" href="/posts/create">Create Post</a>
+                        <p class="nav-link">User: {{ user.username }}</p>
+                        <a href="/users/logout" class="btn btn-primary">Logout</a>
+                    {% else %}
+                        <a href="/users/login/" class="nav-link">Login</a>
+                        <a href="/users/register/" class="nav-link">Register</a>
+                    {% endif %}
                 </div>
             </div>
         </div>
