--- a/templates/posts/posts.html
+++ b/templates/posts/posts.html
@@ -9,6 +9,14 @@
             margin-left: 10%;
         }
     </style>
+    <div>
+        <form action="/posts/" method="get">
+            {% if hastag_id %}
+                <input type="hidden" name="hashtag_id" value="{{ hastag_id }}">
+            {% endif %}
+            <input type="text" name="search" value="">
+        </form>
+    </div>
     <div class="posts">
         {% for post in posts %}
             <div class="card" style="width: 20%">
@@ -18,5 +26,14 @@
                 </div>
             </div>
         {% endfor %}
+    </div>
+    <div>
+        {% for page in max_page %}
+            <a href="/posts/?page={{ page }} {% if hastag_id %}&hashtag_id={{ hastag_id }}{% endif %}{% if search_text %}&search={{ search_text }}{% endif %}">
+                <button style="width: 25px; height: 25px">{{ page }}</button>
+            </a>
+        {% endfor %}
+
+
     </div>
 {% endblock %}
